--- a/local-craft-market/src/app/user/user-profile/user-profile.component.html
+++ b/local-craft-market/src/app/user/user-profile/user-profile.component.html
@@ -1,1 +1,8 @@
-<p>user-profile works!</p>
+<div>
+  <h2>User List</h2>
+  <ul>
+    <li *ngFor="let user of users">
+      {{ user.username }} - {{ user.email }}
+    </li>
+  </ul>
+</div>
